--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,6 +14,14 @@ play.crypto.secret = "changeme"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
+# Register the error handler
+# ~~~~~
+play.http.errorHandler = "utils.ErrorHandler"
+
+# Registers the filters
+# ~~~~~
+play.http.filters = "utils.Filters"
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
@@ -55,3 +63,5 @@ mongo-async-driver {
     loglevel = INFO
   }
 }
+
+include "silhouette.conf"
