--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,7 +51,7 @@ play.http.filters = "utils.Filters"
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-play.application.loader="BootstrapLoader"
+play.application.loader="app.BootstrapLoader"
 
 # Mongo Configuration
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
